# chathelpers

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  LICENSE  README.md  RELEASING.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: release.yml
.gituhb/workflows/: release.yml  test-release.yml
skills/flatten-repo/: SKILL.md
skills/flatten-repo-architecture/: SKILL.md
skills/flatten-repo-quality/: SKILL.md
skills/flatten-repo-testing/: SKILL.md
src/flatten_repo/: __init__.py  cli.py  config.py  exceptions.py  file_manipulation.py  logging.py  output_construction.py  pyproject_sync.py  settings.py
tests/end2end/: test_end2end.py  test_sync_pyproject_cli_end2end.py
tests/integration/: test_cli_integration.py
tests/resources/sync_cli/missing_in_reconstruct/: pyproject.toml
tests/resources/sync_cli/out_of_order_project_table/: pyproject.toml
tests/resources/sync_cli/requirements_include/: pyproject.toml
tests/unit/: test_filters.py  test_settings.py
tests/unit/flatten_repo/: __init__.py  test_cli_unit.py  test_file_manipulation.py  test_filters.py  test_output_construction.py  test_pyproject_sync.py  test_settings.py
