[project]
name = "flatten-repo"
version = "0.2.0"
description = "Export a repository into LLM-friendly Markdown or JSONL."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
keywords = ["llm", "rag", "markdown", "jsonl", "repo", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "annotated-types>=0.7.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
]

[dependency-groups]
dev = [
    "certifi>=2026.1.4",
    "cfgv>=3.5.0",
    "charset-normalizer>=3.4.4",
    "detect-secrets>=1.5.0",
    "distlib>=0.4.0",
    "filelock>=3.20.3",
    "identify>=2.6.16",
    "idna>=3.11",
    "iniconfig>=2.3.0",
    "nodeenv>=1.10.0",
    "packaging>=26.0",
    "platformdirs>=4.5.1",
    "pluggy>=1.6.0",
    "pre-commit>=4.5.1",
    "pygments>=2.19.2",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruff>=0.15.0",
    "ty>=0.0.15",
    "urllib3>=2.6.3",
    "virtualenv>=20.36.1",
]

[project.scripts]
flatten-repo = "flatten_repo.cli:main"

[project.urls]
Homepage = "https://github.com/Guillaume-Lombardo/chathelpers"
Repository = "https://github.com/Guillaume-Lombardo/chathelpers"
Issues = "https://github.com/Guillaume-Lombardo/chathelpers/issues"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flatten_repo"]

[tool.hatch.build.targets.sdist]
include = ["src/flatten_repo", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-ra -q -m unit --strict-markers --cov=flatten_repo --cov-report=term-missing:skip-covered --cov-report=html"
pythonpath = ["src"]
markers = [
    "end2end: end-to-end tests",
    "integration: integration tests",
    "unit: fast unit tests",
]

[tool.coverage.run]
branch = true
source = ["src/flatten_repo"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "def __repr__",
    "if 0:",
    "if __name__ .__main__.:",
    "if self.debug:",
    "if settings.DEBUG",
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = true
precision = 2
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"
title = "Flatten Repo Test Coverage"
